load("@prysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["names.go"],
    importpath = "github.com/Dorol-Chain/Prysm-drl/v5/validator/accounts/petnames",
    visibility = [
        "//cmd/validator:__subpackages__",
        "//validator:__subpackages__",
    ],
    deps = [
        "//crypto/hash:go_default_library",
        "//crypto/rand:go_default_library",
    ],
)
